--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+spring.application.name=mikasa
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/mikasa
+spring.datasource.username = root
+spring.datasource.password = 123456
+
+spring.jpa.hibernate.ddl-auto = create
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 #CONFIG POOL CONNEXION
 spring.datasource.hikari.minimumIdle=5
 spring.datasource.hikari.maximumPoolSize=20
@@ -5,13 +16,10 @@ spring.datasource.hikari.idleTimeout=30000
 spring.datasource.hikari.maxLifetime=2000000
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.poolName=Poolbydata
+
+spring.thymeleaf.prefix=classpath:/templates/
+
 server.port=8862
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/mikasa
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.application.name=MiKasaProject
-
+#CORS
+spring.webmvc.cors.allowed-origins=*
