--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url = jdbc:postgresql://localhost:5432/mikasa
 spring.datasource.username = root
 spring.datasource.password = 123456
 
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
