Se corrigen errores de ejecución y se crean nuevas funiones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
 #CONFIG POOL CONNEXION
 spring.datasource.hikari.minimumIdle=5
 spring.datasource.hikari.maximumPoolSize=20
@@ -18,6 +22,7 @@ spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.poolName=Poolbydata
 
 spring.thymeleaf.prefix=classpath:/templates/
+foto.upload.directory=src/main/resources/uploads
 
 server.port=8862
 
